tests/education/errors/CreateErrorAll.bru
meta {
  name: CreateErrorAll
  type: http
  seq: 4
}

post {
  url: {{baseUrl}}/educations
  body: json
  auth: none
}

body:json {
  {
    "title": false,
    "institution": 34,
    "startDate": true,
    "endDate": "endstring",
    "location": true,
    "duration": "test",
    "verifyUrl": 43
  }
}

assert {
  res.status: eq 400
  res.body.message: contains name has to be a string
  res.body.message: contains provider has to be a string
  res.body.message: contains category has to be a string
  res.body.message: contains duration has to be a number
  res.body.message: contains verifyUrl has to be a valid url
}
